bzip2ida/c2/BZ2_hbCreateDecodeTables
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:759:12: error: expected expression
*( _OWORD *)( base + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:759:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( base + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:760:14: error: expected expression
*( ( _OWORD *)base + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:760:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:761:14: error: expected expression
*( ( _OWORD *)base + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:761:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:762:14: error: expected expression
*( ( _OWORD *)base + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:762:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:763:14: error: expected expression
*( ( _OWORD *)base + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:763:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)base + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:764:12: error: expected expression
*( _OWORD *)base = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:764:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)base = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:826:12: error: expected expression
*( _OWORD *)( limit + 19) = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:826:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( limit + 19) = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:827:14: error: expected expression
*( ( _OWORD *)limit + 4) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:827:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 4) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:828:14: error: expected expression
*( ( _OWORD *)limit + 3) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:828:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 3) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:829:14: error: expected expression
*( ( _OWORD *)limit + 2) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:829:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 2) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:830:14: error: expected expression
*( ( _OWORD *)limit + 1) = 0LL; 
             ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:830:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)limit + 1) = 0LL; 
     ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:831:12: error: expected expression
*( _OWORD *)limit = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:831:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)limit = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/huffman.c:876:44: error: use of undeclared identifier 'xmmword_4198B0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4198B0); 
                                           ^
25 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O2/bzip2-clang-O2/BZ2_hbCreateDecodeTables/src/obj/huffman.o] Error 1
